	(new files) to export functios from modules built as DLLs

	* src/helpers/gnome-utils.c(gnome_uri_list_extract_filenames) :
	use g_filename_from_uri()
	* src/toolbox.c src/interface.c : don't leak the uri list

	* src/xml/repr-util.c : use g_strcasecmp for portability
	* src/svg/svg-length.c : ... and g_snprintf

2003-05-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-item.c (nr_arena_item_set_visible): New method
	(nr_arena_item_invoke_render): Honour visibility

	* src/dialogs/item-properties.c (sp_item_widget_printability_toggled): Implement

	* src/sp-item.c (sp_item_set): Added "sodipodi:printable" attribute

2003-05-14  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/button.c (sp_button_set_composed_tooltip): Add primary shortcut
	dynamically to tooltip

2003-05-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/toolbox.c (sp_maintoolbox_create_toplevel): Use sp_window_new

	* src/helper/window.c: New file, implement shortcut processing

	* src/helper/window.h: New file

2003-05-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/text-context.c (sp_text_context_forget_text): Set object to
	NULL before destroying, so resulting selection::changed does not mess up

	* src/selection-chemistry.c: Removed undo and redo frontends

	* src/shortcuts.c: Moved shortcut code here

2003-05-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/zoom-context.c: Removed bogus zoom ui handlers

	* src/sodipodi.c (sodipodi_init): Initialize some shortcuts

	* src/toolbox.c (sp_toolbox_button_clicked): New callback
	(sp_toolbox_button_new_from_verb): New method
	(sp_toolbox_zoom_create): Use verbs

	* src/interface.c (sp_ui_menu_activate): Universal callback
	(sp_ui_menu_append_item_from_verb): New method
	(sp_ui_view_menu): Use verbs for zoom menu items

	* src/event-context.c (sp_event_context_private_root_handler): Use actions for
	certain keycodes

	* src/verbs.c: New file

	* src/verbs.h: New file

	* src/helper/action.c: New file
